Fixes #10 Ensures that rows don't overflow on mobile devices

--- a/source/assets/css/reset.css
+++ b/source/assets/css/reset.css
@@ -21,7 +21,7 @@
  * http://paulirish.com/2012/box-sizing-border-box-ftw/
  * (let's face it, if Paul Irish thinks it's good, then it probably is)
  */
-*{
+*, *:before, *:after{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
