--- a/source/assets/css/responsive.css
+++ b/source/assets/css/responsive.css
@@ -254,7 +254,7 @@
 		-ms-text-size-adjust:none;
 	}
 
-	body, .container, .ship, .row, .plank{
+	body, .container, .ship, .row, .deck{
 		width:100%;
 		min-width:0;
 		margin-left:0;
